# otlang

./: README.md
codegen/: Cargo.toml
codegen/src/: atoms.rs  cli.rs  compiler.rs  error.rs  fanalysis.rs  functions.rs  lib.rs  loader.rs  main.rs  serialize.rs  signatures.rs  util.rs  variables.rs
dl-loader/: Cargo.toml
dl-loader/src/: lib.rs
docs/: docusaurus.config.js  package-lock.json  package.json
docs/docs/: common-programming-concepts.md  intro.md  philosophy.md  principles.md  structure.md  types.md
docs/docs/tools/: otc.md  otvm.md
docs/src/components/: HomepageFeatures.tsx
docs/src/css/: custom.css
docs/src/pages/: download.tsx  editor.tsx  index.tsx
docs/src/wasm/: web.js  web_bg.wasm
emem/: Cargo.toml
emem/src/: lib.rs
error/src/: lib.rs
examples/brainfuck/: lib.ot  main.ot
examples/bublesort/: main.ot
examples/jit/: main.ot
examples/rule110/: main.ot  std.ot
parser/: Cargo.toml  test.spsl
parser/src/: base.rs  blocks.rs  error.rs  keyword.rs  lib.rs  macros.rs  string.rs  test.rs  value.rs
stack-jit/: Cargo.toml  loader.asm
stack-jit/src/: bytecode.rs  compiler.rs  function.rs  lib.rs  shape.rs  sim.rs  test.rs
stack-jit/src/asm/: arg.rs  buffer.rs  instruction.rs  mod.rs
vm/: Cargo.toml
vm-bytecode/: Cargo.toml
vm-bytecode/src/: bytecode.rs  lib.rs
vm/src/: deserialize.rs  dlibraries.rs  error.rs  helper.rs  lib.rs  main.rs  value.rs  vm.rs
vm/src/jit/: mod.rs  typecheck.rs
