[package]
name = "vm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vm-bytecode = {path="../vm-bytecode"}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libc = "0.2"
dl-loader = {path="../dl-loader"}
stack-jit = {path="../stack-jit"}

